# tweeker_raytracer

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md
apps/: CMakeLists.txt
apps/CMake/: FindGLFW.cmake  configure_optix.cmake  configure_optix7.cmake
apps/Optix7Gui/: CMakeLists.txt  README.md  conanfile.txt
apps/Optix7Gui/inc/: Application.h  Options.h
apps/Optix7Gui/shaders/: app_config.h
apps/Optix7Gui/src/: Application.cpp  Options.cpp  main.cpp
apps/OptixGui/: CMakeLists.txt  PinholeCamera.cpp  Plane.cpp  README.md  Texture.cpp  Timer.cpp  conanfile.txt
apps/OptixGui/include/: Application.h
apps/OptixGui/shaders/: app_config.cuh  boundingbox_triangle_indexed.cu  bsdf_specular_reflection.cu  bsdf_specular_reflection_transmission.cu  closesthit.cu  lens_shader.cu  miss.cu  random_number_generators.cuh  raygeneration.cu  shader_common.cuh
apps/OptixGui/sutil/: CMakeLists.txt  glew.c  sutil.cpp
apps/OptixGui/sutil/GL/: glew.h
apps/rtigo3/: CMakeLists.txt  README.md  conanfile.txt
apps/rtigo3/inc/: Application.h  MyAssert.h  OpenGL_loader.h  Rasterizer.h
apps/rtigo3/shaders/: config.h
apps/rtigo3/src/: Application.cpp  Device.cpp  DeviceMultiGPULocalCopy.cpp  DeviceMultiGPUPeerAccess.cpp  DeviceMultiGPUZeroCopy.cpp  DeviceSingleGPU.cpp  main.cpp
notes/: TODO.org
notes/optix/: install.md
src/: CMakeLists.txt
src/CMake/: FindOptiX.cmake
src/Optix7Gui/: CMakeLists.txt  README.md  conanfile.txt
src/Optix7Gui/inc/: Application.h  InputParser.h
src/Optix7Gui/src/: Application.cpp  Options.cpp  main.cpp
src/OptixGui/: .gitignore  Application.cpp  Application.h  Box.cpp  CMakeLists.txt  Director.h  Options.cpp  Parallelogram.cpp  Picture.cpp  PinholeCamera.cpp  PinholeCamera.h  Plane.cpp  README.md  Sphere.cpp  Texture.cpp  Texture.h  Timer.cpp  Torus.cpp  conanfile.txt  main.cpp
src/OptixGui/include/: Application.h  InputParser.h  Options.h  PinholeCamera.h  Texture.h
src/OptixGui/lib/: app_config.cuh  function_indices.cuh  light_definition.cuh  material_parameter.cuh  vertex_attributes.cuh
src/OptixGui/shaders/: anyhit.cu  app_config.cuh  bsdf_diffuse_reflection.cu  bsdf_specular_reflection.cu  bsdf_specular_reflection_transmission.cu  closesthit.cu  closesthit_light.cu  exception.cu  intersection_triangle_indexed.cu  lens_shader.cu  light_definition.cuh  light_sample.cu  material_parameter.cuh  miss.cu  per_ray_data.cuh  raygeneration.cu  rt_assert.cuh  rt_function.cuh
src/OptixGui/sutil/: CMakeLists.txt
src/OptixGui/texture/: ioTexture.h
